# ResistiveMHDProject

./: .gitattributes  .gitignore  BFieldAnimation.py  CMakeLists.txt  OTAnimation.py  README.md  environment.yml  requirements.txt
include/: Array2D.h  BoundaryConditions.h  Grid.h  HLLD.h  Initialise.h  MHD_flux.h  Resistive_source_terms.h  SLIC.h  SavingRoutine.h  SimulationConfig.h  StateVector.h  TimeStep.h  c_f.h  psi_source_term.h
math/: CMakeLists.txt  Vector3.cpp  Vector3.h  VectorCalc.h
plot/: 1DPlots.py  BFieldAnimation.py  FieldLinesPlot.py  KHAnimation.py  OTAnimation.py  plot_script.plt
src/: B_source_term.cpp  Grid.cpp  HLLD.cpp  Initialise.cpp  MHD_flux.cpp  Resistive_source_terms.cpp  SLIC.cpp  SavingRoutine.cpp  StateVector.cpp  TimeStep.cpp  c_f.cpp  main.cpp  psi_source_term.cpp
